<resources>
    <string name="app_name">RoomDBApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="street_name">Street Name</string>
    <string name="street_number">Street Number</string>
    <string name="login">LogIn</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="logout">Logout</string>
</resources>